# pkg/grpc_server/store_vault_server/h_get_backup_deposit_by_uuid.go
@@ -34,8 +34,7 @@ func (s *StoreVaultServer) GetBackupDepositByUuid(
 	defer span.End()
 
 	input := getBackupDepositByUuid.UCGetBackupDepositByUuidInput{
-		Recipient: req.Recipient,
-		Uuid:      req.Uuid,
+		Uuid: req.Uuid,
 	}
 
 	err := input.Valid()
