# pkg/grpc_server/store_vault_server/h_get_backup_transfer_by_uuid.go
@@ -34,8 +34,7 @@ func (s *StoreVaultServer) GetBackupTransferByUuid(
 	defer span.End()
 
 	input := getBackupTransferByUuid.UCGetBackupTransferByUuidInput{
-		Recipient: req.Recipient,
-		Uuid:      req.Uuid,
+		Uuid: req.Uuid,
 	}
 
 	err := input.Valid()
